name:                ballistics
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/zegkljan/ballistics#readme
license:             BSD3
-- license-file:        LICENSE
author:              Jan Žegklitz
maintainer:          zegkljan@gmail.com
copyright:           2016 Jan Žegklitz
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable ballistics-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Ui
                     , Utils
                     , Physics
                     , Terrain
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , Vec
                     , OpenGL
                     , GLFW-b
                     , vector
  default-language:    Haskell2010

test-suite ballistics-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zegkljan/ballistics
